# modeltune

./: .gitignore  .gitmodules  .pylintrc  CONTRIBUTING.md
.github/: CODEOWNERS
.github/workflows/: auto-annotators.yml  cla.yml
annotations/auto_annotation/: .pre-commit-config.yaml  README.md  combineTeacherAnnotations.py  pyproject.toml
annotations/auto_annotation/config/: secrets.toml
annotations/auto_annotation/modelgauge/: safety_model_constants.py  safety_model_response.py
annotations/auto_annotation/modelgauge/annotators/: llama_3_70b_chat_annotator.py  mistral_8x22b_instruct_annotator.py  prompt_engineered_annotator.py
annotations/auto_annotation/tests/: test_prompt_engineered_annotator.py  test_utils.py
beavertails/: constants.py  llama_guard_utils.py  main.py  safety_labeler.py  taxonomy.py
combineTeacherAnnotations/: combineAnnotations.py
goldenset/: sample_prompts.py
label/: .gitignore  constants.py  label_beavertails.py  prompts.py  safety_labeler.py
label/scripts/: clean_dataset.py  join_teacher_label_datasets.py
mlc_evaluator/: README.md
mlc_evaluator/data/source_datasets/: aegis_small_july_0727.json
mlc_evaluator/inference/: infer.py
mlc_evaluator/inference/eval_datasets/: 1320_sample_labelled.csv
mlc_evaluator/model/mlc_llama_guard/: README.md
mlc_evaluator/runner_scripts/: finetune_llamguard2_aegis_peft.sh  finetune_llamguard2_mlc_v0_5_peft.sh  finetune_llamguard2_mlc_v0_5_peft_hyperparam_1.sh
teachers/: pyproject.toml
teachers/modelgauge/: utils.py
teachers/modelgauge/annotators/: llama_3_70b_chat_annotator.py
(+18 files in other folders)
