[tool.poetry]
name = "modelgauge-teacher-models"
version = "0.1"
description = "Teacher annotator models"
authors = ["MLCommons AI Safety <ai-safety-engineering@mlcommons.org>"]
readme = "README.md"
packages = [
    { include = "modelgauge" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
modelgauge = {path = "../modelgauge", develop = true}
modelgauge_together = {path = "../modelgauge/plugins/together", develop = true}
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
